# contexthub

./: .env.example  .gitignore  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
cloudflare/: .dev.vars.example  DEPLOY.md  README.md  TODO.md  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
cloudflare/migrations/: 0001_init.sql
cloudflare/scripts/: bootstrap-free.sh
cloudflare/src/: ctx.ts  filesystem.ts  index.ts
contexthub/: __init__.py  __main__.py  adapter_helpers.py  app.py  client.py  config.py  env.py  importer.py  panel.py  providers.py  schemas.py  search_index.py  security.py  service.py  store.py  text.py
deploy/: contexthub.service
docs/: adapter-examples.md  agent-integration.md  api.md  architecture.md  auth-acl.md  deploy-test-server.md  execution-plan.md  import-jobs.md  layer-model.md  openapi.yaml  roadmap.md  stack-decision.md  upload-derivation-design.md
examples/: _session_commit.py  claude_code_commit.py  codex_commit.py  openclaw_commit.py  openclaw_query.py  quickstart.js  quickstart.py
legacy/node-mvp/src/: config.js  router.js
legacy/node-mvp/test/: hub.test.js
scripts/: check-secrets.js  check_secrets.py  claude-code-commit.sh  codex-commit.sh  deploy-test-server.sh  import-test-server-batch.sh  inspect-test-server-migration.sh  openclaw-commit.sh  openclaw-query.sh
src/: server.js
src/client/: contextHubClient.js
src/providers/: rerankClient.js
src/utils/: env.js  id.js
tests/: test_adapters.py  test_app.py  test_importer.py  test_service.py  test_store.py  test_uri.py
(+5 files in other folders)
